--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "konva": "^10.0.2",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-konva": "^19.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
