--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-konva": "^19.0.10"
+    "react-konva": "^19.0.10",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
